--- a/package.json
+++ b/package.json
@@ -6,32 +6,31 @@
   "scripts": {
     "build": "remix build",
     "dev": "node -r dotenv/config node_modules/.bin/remix dev",
-    "postinstall": "remix setup node",
     "start": "remix-serve build"
   },
   "prisma": {
     "seed": "node --require esbuild-register prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^3.10.0",
-    "@remix-run/react": "^1.2.2",
-    "@remix-run/serve": "^1.2.2",
+    "@prisma/client": "4.3.1",
+    "@remix-run/node": "1.7.0",
+    "@remix-run/react": "1.7.0",
+    "@remix-run/serve": "1.7.0",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remix": "^1.2.2"
+    "dotenv": "16.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.2.2",
+    "@remix-run/dev": "1.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.9",
-    "esbuild-register": "^3.3.2",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "esbuild-register": "3.3.3",
     "prettier": "^2.5.1",
-    "prisma": "^3.10.0",
-    "typescript": "^4.5.5"
+    "prisma": "4.3.1",
+    "typescript": "4.8.3"
   },
   "engines": {
     "node": ">=14"
